--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -60,7 +60,7 @@
                         <div class="row">
                             <div class="col-lg-8 col-sm-12">
                                 <div class="mx-5">
-                                    <h4 class="mt-5">Welcome to my profile</h4>
+                                    <h4 class="mt-5">Welcome to my profile</h4> 
                                     {{#if descriptionBool }}
                                         <p>
                                             This is your description 
@@ -134,6 +134,9 @@
                                         </li>
                                     </ul>
                                 </div>
+                                <div class="mx-5 mt-5">
+                                    <a href="" class="btn btn-md btn-secondary rounded-5 float-end">Edit Your Profile</a>
+                                </div>
                             </div>
                             <div class="col-lg-4 col-sm-12 d-flex justify-content-center">
                                 <div class="card mt-3 mx-3 w-100 shadow p-3 mb-5 bg-body rounded">
@@ -141,10 +144,10 @@
                                     <div class="card-body">
                                         <h5 class="card-title text-center ">{{ profileFirstName }} {{ profileSecondName }}</h5>
                                         {{#if roleBool }}
-                                            <p class="card-text text-center ">Subtitle profile here!</p>
+                                            <p class="card-text text-center ">Role your profile here!</p> 
                                             <div class="row">
                                                 <button type="button" class="btn btn-sm btn-secondary" data-bs-toggle="modal" data-bs-target="#subtittle">
-                                                    Add your subtitle
+                                                    Add your role
                                                 </button>
                                                 <div class="modal fade" id="subtittle" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                                     <div class="modal-dialog">
